runFormatTest(import.meta, ["typescript", "babel-ts"], {
  printWidth: 120,
  semi: false,
});
runFormatTest(import.meta, ["typescript", "babel-ts"]);
